<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr09_20171.lab2.Login">

    <TextView
        android:id="@+id/txUserL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txUserLogin" />

    <EditText
        android:id="@+id/edUserL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txUserLogin"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txPassL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txPasswordLogin" />

    <EditText
        android:id="@+id/edPassL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txPasswordLogin"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bttLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txIngLogin" />
</LinearLayout>
